# robs-solar

./: .env.example  .gitignore  .vercelignore  README.md  package-lock.json  package.json  render.yaml  vercel.json
backend/: .env.example  _soc_check.py  _soc_monitor.py  pyproject.toml
backend/app/: __init__.py  config.py  logging.py  main.py
backend/app/adapters/: base.py  factory.py  home_assistant.py  modbus_bridge.py  modbus_tcp.py  register_map.py  simulator.py  sunsynk_auth.py  sunsynk_connect.py  sunsynk_tou.py
backend/app/auth/: cron.py  dependencies.py  passwords.py  sessions.py
backend/app/db/: models.py  session.py
backend/app/integrations/: base.py  enable_banking_client.py  gocardless_client.py  lunch_flow_client.py  open_banking_provider.py  quickfile_client.py  quickfile_provider.py  quickfile_reports.py  registry.py
backend/app/middleware/: rate_limit.py  security_headers.py
backend/app/routes/: ai.py  alerts.py  audit.py  auth.py  capabilities.py  config_safety.py  config_snapshots.py  controls.py  finance.py  finance_ai.py  forecast.py  health.py  metrics.py  octopus.py  optimisation.py  recommendations.py  settings_notifications.py  tariff.py  ws.py
backend/app/schemas/: domain.py  finance.py
backend/app/services/: ai_advisor_service.py  alert_service.py  analytics_helpers.py  analytics_service.py  audit_service.py  auto_schedule_service.py  auto_scheduler.py  battery_plan_service.py  billing_reconciliation_service.py  control_service.py  (+35 more)
backend/deploy/: Dockerfile
backend/scripts/: discover_modbus.py
backend/tests/: conftest.py
(+355 files in other folders)
